# Rustitler

./: .gitignore  package-lock.json  package.json  vite.config.ts
.github/workflows/: offline-package.yml  windows-ci.yml
doc/: high-level-design.md  newfunction-high-level-design.md  newfunction-prompt.md  newfunction.md  prompt.md  proposal.md
doc/newfunction-tasks/: api-commands.md  app-ui.md  classify.md  commands.md  file-dialog.md  ipc-types.md  models.md  newfunction-progress.md  settings-store.md  settings.md
doc/packaging/: asset-sizes.md  licenses.md  offline-audit.md
doc/tasks/: batch-scheduler.md  commands.md  core-models.md  dependency-spikes.md  diagnostics.md  extract.md  history.md  ingest.md  packaging-offline.md  progress.md  rename.md  scoring.md  settings.md  spike-results.txt  ui.md
docs/superpowers/plans/: 2026-06-26-batch-scheduler.md  2026-06-26-extract.md  2026-06-26-history.md  2026-06-26-ingest.md  2026-06-27-ci-offline-package-validation.md  2026-06-27-packaging-offline.md  2026-06-27-ui.md  2026-06-29-duplicate-file-retry.md  2026-06-30-macos-native-ui-redesign.md
scripts/: module-entry.mjs  module-entry.node-test.mjs  offline-package-workflow.node-test.mjs  package-scripts.node-test.mjs  package-size-report.mjs  package-size-report.node-test.mjs  prepare-offline-assets.mjs  prepare-offline-assets.node-test.mjs
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: batch_scheduler.rs  classify.rs  commands.rs  diagnostics.rs  errors.rs  extract.rs  history.rs  ingest.rs  lib.rs  main.rs  models.rs  offline_smoke.rs  packaging.rs  scoring.rs  settings.rs  spikes.rs
src/api/: commands.test.ts  commands.ts  dragDrop.ts  events.test.ts  events.ts  fileDialog.test.ts  fileDialog.ts
src/stores/: batchStore.test.ts  batchStore.ts  observable.ts  settingsStore.test.ts  settingsStore.ts
src/test/: fixtures.ts
src/types/: ipc.ts
(+2 files in other folders)
